tests/baselines/reference/parserMemberFunctionDeclaration4.errors.txt
parserMemberFunctionDeclaration4.ts(2,5): error TS1031: 'export' modifier cannot appear on class elements of this kind.


==== parserMemberFunctionDeclaration4.ts (1 errors) ====
    class C {
        export Foo() { }
        ~~~~~~
!!! error TS1031: 'export' modifier cannot appear on class elements of this kind.
    }